add person class,UnitTest

--- a/3ConsoleAppAssign/3ConsoleAppAssign.csproj
+++ b/3ConsoleAppAssign/3ConsoleAppAssign.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>_3ConsoleAppAssign</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
